--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,10 @@
 
   <string name="action_settings">Settings</string>
   <string name="title_activity_maps">Map</string>
+  <string name="msg_erro_login">Login Inválido!</string>
+  <string name="user_nome">Nome</string>
+  <string name="user_email">Email</string>
+  <string name="user_senha">Senha</string>
+  <string name="cadastrar">Cadastrar</string>
+  <string name="msg_erro_cadastro">Erro no Cadastro</string>
 </resources>
