--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
   <string name="user_senha">Senha</string>
   <string name="cadastrar">Cadastrar</string>
   <string name="msg_erro_cadastro">Cadastro Inválido</string>
+  <string name="title_activity_maps_exemplo">Map</string>
 </resources>
