--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
   <string name="cadastrar">Cadastrar</string>
   <string name="msg_erro_cadastro">Cadastro Inválido</string>
   <string name="title_activity_maps_exemplo">Map</string>
+
+  <!-- TODO: Remove or change this placeholder text -->
+  <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
