--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,10 @@
   <string name="msg_erro_cadastro">Cadastro Inválido</string>
   <string name="title_activity_maps_exemplo">Map</string>
 
-  <!-- TODO: Remove or change this placeholder text -->
-  <string name="hello_blank_fragment">Hello blank fragment</string>
+  <string name="rotas">Rotas</string>
+  <string name="sair">Sair</string>
+  <string name="sobre">Sobre</string>
+  <string name="tempo_splash">2500</string>
+  <string name="paradas">Paradas</string>
+  <string name="rota">Rota</string>
 </resources>
